--- a/src/static/ui.scss
+++ b/src/static/ui.scss
@@ -88,6 +88,13 @@ body {
 
     .chat-sidebar-rooms-list-container {
       margin: 15px 0;
+
+      .chat-room-link {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 100%;
+      }
     }
   }
 
